# cpython-clion-demo

./: CMakeLists.txt  README.md  main.c
